# opengl-learning

./: CMakeLists.txt  README.md
include/: glad.h
src/: CMakeLists.txt  glad.c  learn.cpp  vertexShader.txt
